COmmit Before MEss